--- a/cum.conf
+++ b/cum.conf
@@ -6,5 +6,5 @@ DESCRIPTION="This is an example app, packaged in a .cum format"
 TYPE=program
 
 EXECUTABLE_AMD64="./target/x86_64-unknown-linux-musl/release/hello_world"
-EXECUTABLE_MIPS64EL="./target/mips64el-unknown-linux-muslabi64/release/hello_world"
+EXECUTABLE_MIPS64="./target/mips64el-unknown-linux-muslabi64/release/hello_world"
 EXECUTABLE_ARM64="./target/aarch64-unknown-linux-musl/release/hello_world"
